--- a/Part 4. Database/Quest 15. ORM/skeleton/package.json
+++ b/Part 4. Database/Quest 15. ORM/skeleton/package.json
@@ -1,7 +1,10 @@
 {
   "private": true,
   "dependencies": {
-    "express": "*",
-    "sequelize": "*"
+   	"express": "*",
+	"body-parser": "*",
+	"express-session": "*",
+	"sequelize": "*",
+	"mysql": "*"
   }
 }
